--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,19 @@ frequency_adjacency/adjacent_in_each_source
 
 # Ignore antenna plots
 stamps/antenna_plots
+
+# Ignore plots of stamps
+frequency_adjacency/stamps_of_flat_rfi/*.png
+frequency_adjacency/stamps_of_large_dr/*.png
+frequency_adjacency/stamps_of_mixed_collision_groups/high_highest_group/*.png
+frequency_adjacency/stamps_of_mixed_collision_groups/high_max_group/*.png
+frequency_adjacency/stamps_of_mixed_collision_groups/high_min_group/*.png
+frequency_adjacency/stamps_of_mixed_collision_groups/high_misc_group_1/*.png
+frequency_adjacency/stamps_of_mixed_collision_groups/high_misc_group_2/*.png
+frequency_adjacency/stamps_of_mixed_collision_groups/max_group/*.png
+frequency_adjacency/stamps_of_mixed_collision_groups/min_group/*.png
+frequency_adjacency/stamps_of_mixed_collision_groups/misc_group_1/*.png
+frequency_adjacency/stamps_of_mixed_collision_groups/misc_group_2/*.png
+stamps/look_at_stamps_matched_hits/*.png
+
+
